# DOE-Framework-Agentic-AI

./: .env.example  .gitignore  AGENTS.md  Default_AGENTIC WORKFLOWS 6 HOUR COURSE_ Beginne.txt  README.md  agents.py  config.json  course_plan.md  instructions.md  lesson_plan.html  lesson_plan.md  mini_workshop.md  pnpm-lock.yaml  pyproject.toml  requirements.txt  setup.ps1  setup.sh
outputs/agent-website-manager/: .env.example  .gitignore  AGENTS.md  README.md  agent_repo_compatibility.md  agents.py  config.json  instructions.md  pyproject.toml  requirements.txt  setup.ps1  setup.sh
outputs/agent-website-manager/.github/: copilot-instructions.md
outputs/agent-website-manager/.github/agents/: agent-website-manager.agent.md
outputs/agent-website-manager/.github/prompts/: system.md
outputs/agent-website-manager/.tmp/: _ga_pages.json  check_vmf.py  create_folders.py  create_vmf_folders.py  fixed_page.json  install_vmf.py  setup_vmf.py  test_plugin.py  vmf_assign_media.py
outputs/agent-website-manager/.tmp/fracktal-media-folders/: admin.css  admin.js  fracktal-media-folders.php
outputs/agent-website-manager/.tmp/scripts/: analyze_pages.py  create_folders.py  create_folders_v2.py  debug_folders.py  delete_dup_videos.py  fetch_analytics.py  fetch_search_console.py  (+16 more)
outputs/agent-website-manager/agent-data/: INDEX.md
outputs/agent-website-manager/tests/: apply_h1_fix.py  audit_speed_seo_llm.py  check_seo.py  deploy_file_manager.py  emcp_fix_h1.py  find_favicon_source.py  fix_all_product_pages.py  fix_critical_issues.py  fix_h1.py  fix_headings_images.py  fix_og_favicon_security.py  fix_remaining_h1.py  fix_robots.py  product_page_audit.py  psi_test.py  quick_audit.py  wp_cleanup_plugins.py  wp_diagnostic.py
outputs/bill-reimbursement-agent/: .env.example  AGENTS.md  README.md  agents.py  bill-reimbursement-agent.code-workspace  config.json  instructions.md  pyproject.toml  requirements.txt  setup.ps1  setup.sh
outputs/bill-reimbursement-agent/.github/: copilot-instructions.md
outputs/bill-reimbursement-agent/tests/: test_agents.py
outputs/indian-legal-compliance-agent/: .env.example  AGENTS.md  README.md  agents.py  config.json  instructions.md  pyproject.toml  requirements.txt  setup.ps1  setup.sh
outputs/indian-legal-compliance-agent/.github/: copilot-instructions.md
outputs/indian-legal-compliance-agent/directives/: indian_legal_compliance.md
outputs/indian-legal-compliance-agent/execution/: compliance_checker.py  compliance_tracker.py
(+187 files in other folders)
