[project]
name = "agent-agent-creator"
version = "0.1.0"
description = "Expert agent that creates other agents using the DOE Framework. Builds complete, production-ready agent workspaces with directives, scripts, and automated setup."
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
