[project]
name = "agent-bill-reimbursement-agent"
version = "0.1.0"
description = "Minimal base setup - add your own directives and scripts"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "openai",
    "python-dotenv",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
