[project]
name = "automation-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["requests", "python-dotenv"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
